boxxy/public/css/layout.css
/* ... */
.contact-form input.submit-button {
    background: #e8e8e8;
    border: 0;
    color: #3a3a3a;
    display: inline-block;
    font-size: 14px;
    font-weight: 400;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
    margin-bottom: 20px;
    line-height: 0;
    padding: 3px 4px 0 4px;
    font-family: 'Source Sans Pro', sans-serif;
    width: 100px;
    height: 24px;
}

.contact-form input.submit-button:hover {
    color: #e8e8e8;
    background: #3a3a3a;
    border: 0;
}

.contact-info {
    margin-top: 20px;
}

.contact-info h5 {
    margin-bottom: 10px;
}

.contact-info img {
    vertical-align: middle;
    margin-right: 10px;
}

.social {
    padding-top: 15px;
}

.social ul li {
    display: inline;
    margin-right: 5px;
}

.social img:hover {
    opacity: 0.7;
}

.copyright {
    text-align: center;
    margin-top: 10px;
    padding-top: 30px;
}

.copyright p {
    color: #858585;
    font-size: 14px;
}

.copyright a, .copyright a:visited { color: #999; }
.copyright a:hover, .copyright a:focus { color: #ccc; }

nav select {
    display: none;
}

@media only screen and (max-width: 1024px) {
    #intro {
        height: 200px;
    }

    .title {
        top: 20px;
    }

    h1 {
        font-size: 100px;
        margin-bottom: 60px;
    }
}

@media only screen and (max-width: 1024px) {
    .bg1, .bg2, .bg3, .bg4, .bg5 {
        background-attachment: scroll;
    }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
    h1 {
        font-size: 70px;
        margin-bottom: 20px;
    }

    #intro {
        height:130px;
    }

    h1.small {
        font-size: 40px;
        line-height: 50px;
        margin-bottom: 20px;
    }

    .intro-line {
        width: 450px;
        margin-bottom: 18px
    }

    .title p {
        font-size: 20px;
        line-height: 28px;
    }

    nav ul li {
        padding-left: 15px;
        padding-right: 15px;
    }
}

@media only screen and (max-width: 479px) {
    #intro {
        height: 115px;
    }

    .title {
        top: 30px;
    }

    .intro-line {
        display: none;
    }

    h1 {
        font-size: 60px;
        margin-bottom: 20px;
    }

    h1.small {
        font-size: 24px;
        line-height: 28px;
        margin-bottom: 10px;
    }

    .title p {
        font-size: 18px;
        line-height: 28px;
    }

    nav ul {
        display: none;
    }

    nav select {
        display: inline-block;
        position: relative;
        margin-top: 8px;
        color: #000;
    }

    .social-intro {
        margin-top: 15px;
    }

    .social-intro a {
        width: 180px; height: 26px;
        font-size: 14px;
        line-height: 25px;
        opacity: 1;
    }

    .schedule td {
        padding-right: 0 !important;
    }
}

#live-results {
    margin-bottom: 2em;

    border: 1px solid #C9C9C9;
    background-color: #FFF;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

li {
    margin-left: 0px;
}

#live-results table {
    margin: 0.5em 0;
    width: 100%;
}

#live-results td {
    text-align: center;
    font-size: 16px;
}

#live-results .placeholder {
    color: #888;
}

#live-results .follow-link {
    vertical-align: middle;
}

#live-results td { width: 240px; height: 25px;}
#teams3, #teams6 { height: 15px; }

#teams3 td, #teams6 td {
    font-weight: bold;
    vertical-align: bottom;
}

#laps3, #laps6 {
    vertical-align: top;
}

#teams3 td { padding-top: 0.5em; }
#teams6 td { padding-top: 0.25em; }
#laps6 td { padding-bottom: 0.5em; }

.schedule {
    margin: 0 auto 2em;
    font-size: 16px;
}

.schedule strong {
    display: block;
    margin-bottom: 4px;
}

.schedule span {
    font-size: 14px;
    font-style: italic;
    display: block;
}

.schedule td {
    padding: 0 40px 6px 0;
}

.schedule th {
    padding-right: 14px;
    text-align: left;
    color: #999;
}

#scoresresult ol {
    padding: 0px;
}

#scoresresult li .name {
    margin-left: 30px;
}

#scoresresult li .laps {
    float: right;
}

#scoresresult ol {
    padding: 0px;
}

#scoresresult li .name {
    margin-left: 30px;
}

#scoresresult li .laps {
    float: right;
}

